--- a/css/styles.css
+++ b/css/styles.css
@@ -644,6 +644,7 @@ img {
   width: 408px;
   height: 576px;
   background-color: #fcfcfc;
+  padding: 72px 24px 24px;
 }
 .modal-close-btn {
   position: absolute;
@@ -673,4 +674,112 @@ img {
 .modal-close-btn:hover .modal-close-btn-icon,
 .modal-close-btn:focus .modal-close-btn-icon {
   fill: var(--fourth-color);
+}
+
+.modal-form-title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--main-title-color);
+  margin-bottom: 8px;
+}
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+.modal-form-field {
+  margin-bottom: 8px;
+}
+.modal-form-input-desc {
+  display: block;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
+  color: #8e8f99;
+}
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 38px;
+  transition: border-color var(--transition-dur-and-func);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--third-title-color);
+}
+
+.modal-form-icon {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 19px;
+  transform: translateY(-50%);
+  transition: fill var(--transition-dur-and-func);
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--third-title-color);
+}
+
+.modal-input-wrapper {
+  position: relative;
+}
+.modal-form-comment {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  border-radius: 4px;
+  padding-top: 8px;
+  padding-left: 16px;
+  transition: border-color var(--transition-dur-and-func);
+}
+
+.modal-form-comment:focus {
+  outline: none;
+  border-color: var(--third-title-color);
+}
+
+.modal-form-check {
+}
+
+.modal-form-check-desc {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  margin-bottom: 24px;
+}
+
+.modal-form-check-desc::before {
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1.25px solid var(--main-bgr-color);
+  border-radius: 2px;
+  content: "";
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.modal-form-check:checked + .modal-form-check-desc::before {
+  background-color: var(--main-bgr-color);
+  background-image: url(/images/Property\ click.svg);
+}
+
+.modal-form-check:focus + .modal-form-check-desc::before {
+  background-color: var(--main-bgr-color);
+  background-image: url(/images/Property\ click.svg);
+}
+.modal-form-submit {
 }
