--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,7 @@ img {
 .contacts:focus {
   color: var(--main-bgr-color);
 }
+/* HEADER */
 
 /* STUDIO */
 
@@ -361,6 +362,7 @@ img {
 .social-list-icon {
   fill: var(--logo-color);
 }
+/* STUDIO */
 
 /* PORTFOLIO */
 
@@ -450,6 +452,7 @@ img {
 .main-list-link {
   display: block;
 }
+/* PORTFOLIO */
 
 /* CUSTOMERS */
 
@@ -494,6 +497,8 @@ img {
   color: var(--main-bgr-color);
 }
 
+/* CUSTOMERS */
+
 /* FOOTER */
 .footer-desc {
   display: flex;
@@ -522,7 +527,7 @@ img {
 }
 
 .logo-footer-text {
-  max-width: 264px;
+  width: 264px;
   margin-top: 16px;
 }
 
@@ -557,6 +562,8 @@ img {
   border-bottom: 1px solid var(--logo-text-color);
 }
 
+/* Social-media */
+
 .social-media-list {
   display: flex;
   gap: 16px;
@@ -589,7 +596,65 @@ img {
   margin-top: 16px;
 }
 
-/*  */
+/* Social-media */
+
+/* footer-form */
+
+.footer-form-title {
+  margin-bottom: 16px;
+  color: var(--fourth-color);
+}
+.footer-form {
+  display: flex;
+  align-items: center;
+}
+.footer-form-input {
+  padding: 8px 16px;
+  margin-right: 24px;
+  min-width: 264px;
+  height: 40px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--logo-text-color);
+}
+.footer-form-input::placeholder {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-form-button {
+  display: inline-flex;
+  gap: 16px;
+  color: var(--fourth-color);
+  background: var(--third-title-color);
+  padding: 8px 24px;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  min-width: 165px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  transition: background-color var(--transition-dur-and-func);
+}
+.footer-form-button:hover,
+.footer-form-button:focus {
+  background-color: var(--main-bgr-color);
+}
+
+/* footer-form */
+
+/* FOOTER */
+
+/* Modal-window */
 
 .main-list-link-wrapper {
   position: relative;
@@ -749,9 +814,6 @@ img {
   border-color: var(--third-title-color);
 }
 
-.modal-form-check {
-}
-
 .modal-form-check-desc {
   display: flex;
   align-items: center;
@@ -781,5 +843,21 @@ img {
   background-color: var(--main-bgr-color);
   background-image: url(/images/Property\ click.svg);
 }
+
 .modal-form-submit {
+  min-width: 160px;
+  align-self: center;
+  color: var(--fourth-color);
+  background: var(--third-title-color);
+  padding: 16px 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  transition: background-color var(--transition-dur-and-func);
 }
+
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+  background-color: var(--main-bgr-color);
+}
+
+/* Modal-window */
