--- a/css/styles.css
+++ b/css/styles.css
@@ -611,9 +611,11 @@ img {
   display: flex;
   align-items: center;
 }
+.footer-form-wrapper {
+  margin-right: 24px;
+}
 .footer-form-input {
   padding: 8px 16px;
-  margin-right: 24px;
   min-width: 264px;
   height: 40px;
   background-color: transparent;
@@ -762,6 +764,7 @@ img {
 .modal-form-field {
   margin-bottom: 8px;
 }
+
 .modal-form-input-desc {
   display: block;
   font-style: normal;
@@ -778,6 +781,9 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 38px;
+  padding-bottom: 8px;
+  padding-top: 8px;
+  padding-right: 16px;
   transition: border-color var(--transition-dur-and-func);
 }
 
@@ -801,16 +807,24 @@ img {
 
 .modal-input-wrapper {
   position: relative;
+  display: block;
 }
+
 .modal-form-comment {
+  display: block;
   width: 100%;
-  height: 120px;
+  min-height: 120px;
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-top: 8px;
   padding-left: 16px;
   transition: border-color var(--transition-dur-and-func);
+
+  font-size: 14px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #000000;
 }
 
 .modal-form-comment:focus {
@@ -818,35 +832,61 @@ img {
   border-color: var(--third-title-color);
 }
 
-.modal-form-check-desc {
+.form-privacy-policy {
   display: flex;
   align-items: center;
   font-size: 12px;
   line-height: 1.33;
   letter-spacing: 0.04em;
-  margin-top: 16px;
+  margin-top: 8px;
   margin-bottom: 24px;
 }
 
-.modal-form-check-desc::before {
-  display: block;
+.checkbox-border {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1.25px solid #2e2f42;
+  border-radius: 2px;
   width: 16px;
   height: 16px;
-  border: 1.25px solid var(--main-bgr-color);
-  border-radius: 2px;
-  content: "";
-  cursor: pointer;
-  margin-right: 10px;
+  margin-right: 8px;
+
+  transition: background-color var(--transition-dur-and-func),
+    border-color var(--transition-dur-and-func);
 }
 
-.modal-form-check:checked + .modal-form-check-desc::before {
-  background-color: var(--main-bgr-color);
-  background-image: url(/images/property-click.svg);
+.checkbox-privacy-policy {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  overflow: hidden;
+}
+.privacy-policy-icon {
+  opacity: 0;
+  transition: opacity var(--transition-dur-and-func);
 }
 
-.modal-form-check:focus + .modal-form-check-desc::before {
-  background-color: var(--main-bgr-color);
-  background-image: url(../images/property-click.svg);
+.checkbox-privacy-policy:checked + .checkbox-border {
+  border-color: var(--third-title-color);
+  background-color: var(--third-title-color);
+}
+.checkbox-privacy-policy:checked + .checkbox-border .privacy-policy-icon {
+  opacity: 1;
+  fill: #f4f4fd;
+}
+.checkbox-privacy-policy:focus + .checkbox-border {
+  outline: 1px solid rgb(16, 16, 16);
+}
+.privacy-policy-text {
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: #757575;
 }
 
 .modal-form-submit {
